// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyboardKey > renders a <kbd> element with element child 1`] = `
<DocumentFragment>
  <kbd
    class="key"
  >
    <strong>
      foo
    </strong>
  </kbd>
</DocumentFragment>
`;

exports[`KeyboardKey > renders a <kbd> element with string child 1`] = `
<DocumentFragment>
  <kbd
    class="key"
  >
    foo
  </kbd>
</DocumentFragment>
`;
